--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,7 @@
-streamlit==1.13.0
-pillow==10.3.0
-keras-ocr @ git+https://github.com/faustomorales/keras-ocr.git@e8d34a46f07d50158e1d86d6c617e99bfe99e2f8
-#keras-ocr==0.8.4
-ultralytics==8.3.5
-ultralytics-thop==2.0.6
-tensorflow==2.9.3
-opencv-python-headless==4.6.0.66
-altair
+streamlit>=1.24.0
+Pillow>=10.0.0
+opencv-python-headless>=4.8.0
+keras-ocr>=0.9.0
+numpy>=1.25.0
+matplotlib>=3.7.0
+ultralytics>=8.0.0
