--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ streamlit>=1.24.0
 Pillow>=10.0.0
 opencv-python-headless>=4.8.0
 keras-ocr>=0.9.0
+tensorflow>=2.11.0
 numpy>=1.25.0
 matplotlib>=3.7.0
 ultralytics>=8.0.0
