--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Pillow>=10.0.0
 opencv-python-headless>=4.8.0
 keras-ocr>=0.9.0
 tensorflow>=2.11.0
-numpy>=1.25.0
+numpy<2.0
 matplotlib>=3.7.0
 ultralytics>=8.0.0
+imgaug>=0.4.0
