--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 streamlit>=1.24.0
 Pillow>=10.0.0
 opencv-python-headless>=4.8.0
-keras-ocr>=0.9.0
+git+https://github.com/faustomorales/keras-ocr.git#egg=keras-ocr
 tensorflow==2.8.0
 numpy<2.0
 matplotlib>=3.7.0
