--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ opencv-python-headless==4.5.1.48
 git+https://github.com/faustomorales/keras-ocr.git#egg=keras-ocr
 tensorflow==2.12.0
 streamlit>=1.20.0
-numpy<2.0
+numpy>2.0
 matplotlib>=3.7.0
 ultralytics>=8.0.0
 imgaug>=0.4.0
