--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-numpy==1.23.0
-opencv-python-headless==4.5.1.48
-streamlit==1.18.0
 Pillow>=10.0.0
+opencv-python-headless==4.5.1.48  # Or the latest stable version
 git+https://github.com/faustomorales/keras-ocr.git#egg=keras-ocr
 tensorflow==2.12.0
+streamlit>=1.20.0
+numpy>=1.22,<1.24
 matplotlib>=3.7.0
 ultralytics>=8.0.0
 imgaug>=0.4.0
